Update to v4 of enforcement

--- a/app/views/before-you-start/v12/check-answers.html
+++ b/app/views/before-you-start/v12/check-answers.html
@@ -89,7 +89,7 @@
                 {{ data["bys-enforcement-issue-date-month"] | formatMonth }}
                 {{ data["bys-enforcement-issue-date-year"] }}
               {% else %}
-                {{ 8 | daysAgo }}.
+                {{ 8 | daysAgo }}
               {% endif %}
 
             </dd>
@@ -110,7 +110,7 @@
               {{ data["bys-v11-enforcementeffectivedate-month"] | formatMonth }}
               {{ data["bys-v11-enforcementeffectivedate-year"] }}
               {% else %}
-                {{ 20 | daysInFuture }}.
+                {{ 20 | daysInFuture }}
               {% endif %}
 
             </dd>
@@ -132,7 +132,7 @@
                 {{ data["enforcement-intent-date-month"] | formatMonth }}
                 {{ data["enforcement-intent-date-year"] }}
                 {% else %}
-                  {{ 2 | daysAgo }}.
+                  {{ 2 | daysAgo }}
                 {% endif %}
               </dd>
               <dd class="govuk-summary-list__actions">
