--- a/app/views/enforcement/v4/grounds/facts-format.html
+++ b/app/views/enforcement/v4/grounds/facts-format.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 
-{% set title = "How do you want give us the facts to support your grounds?" %}
+{% set title = "How do you want give us the facts and reasons to support your grounds?" %}
 
 {% block pageTitle %}
   {{title}} - Tell us about the appeal site - GOV.UK
