Content update for facts and reasons format

--- a/app/views/enforcement/v4/grounds/facts-format.html
+++ b/app/views/enforcement/v4/grounds/facts-format.html
@@ -45,17 +45,17 @@
           items: [
             {
               value: "file",
-              text: "Upload a single document with all of your facts in",
+              text: "Upload a single document with all of your evidence",
               checked: checked("enforcement-facts-format", "file")
             },
             {
               value: "text",
-              text: "Tell us using a text box for each reason",
+              text: "Tell us using a text box for each selected ground",
               checked: checked("enforcement-facts-format", "text")
             },
             {
               value: "files",
-              text: "Upload a file for each reason",
+              text: "Upload a file for each selected ground",
               checked: checked("enforcement-facts-format", "files")
             }
           ]
