Enforcement v5, more simple

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -49,7 +49,21 @@ service-start{% extends "layout.html" %}
                       text: "WIP"
                     }) }}
                     <h3 class="govuk-heading-s govuk-!-margin-bottom-3">
-                      Appeal an enforcement notice - Version 4
+                      Version 5 - simple
+                    </h3>
+                    <ul class="govuk-list govuk-list--bullet">
+                      <li><a href="/enforcement/v5/skip/appeal-start">Before you continue</a></li>
+                      <li><a href="/enforcement/v5/skip/tasks">Completed task list</a></li>
+                    </ul>
+                  </div>
+
+                  <div class="govuk-inset-text govuk-!-margin-top-0">
+                    {{ govukTag({
+                      classes: "govuk-tag--green govuk-!-margin-bottom-3",
+                      text: "Ready for UR"
+                    }) }}
+                    <h3 class="govuk-heading-s govuk-!-margin-bottom-3">
+                      BYS version 12 + enforcement version 4
                     </h3>
                     <ul class="govuk-list govuk-list--bullet">
                       <!-- <li><a href="/before-you-start/v11">Before you start</a></li> -->
@@ -66,7 +80,7 @@ service-start{% extends "layout.html" %}
                       text: "Ready for UR"
                     }) }}
                     <h3 class="govuk-heading-s govuk-!-margin-bottom-3">
-                      Appeal an enforcement notice - Version 3
+                      Version 3
                     </h3>
                     <ul class="govuk-list govuk-list--bullet">
                       <!-- <li><a href="/before-you-start/v11">Before you start</a></li> -->
@@ -83,7 +97,7 @@ service-start{% extends "layout.html" %}
                       text: "Ready for UR"
                     }) }}
                     <h3 class="govuk-heading-s govuk-!-margin-bottom-3">
-                      Appeal an enforcement notice - Version 2
+                      Version 2
                     </h3>
                     <ul class="govuk-list govuk-list--bullet">
                       <!-- <li><a href="/before-you-start/v11">Before you start</a></li> -->
@@ -100,7 +114,7 @@ service-start{% extends "layout.html" %}
                       text: "Ready for UR"
                     }) }}
                     <h3 class="govuk-heading-s govuk-!-margin-bottom-3">
-                      Appeal an enforcement notice - Version 1
+                      Version 1
                     </h3>
                     <ul class="govuk-list govuk-list--bullet">
                       <!-- <li><a href="/before-you-start/v11">Before you start</a></li> -->
